0.2
-----------
* Added this CHANGELOG file
* Added a TODO file
* Made appropriate classes and interfaces serializable.
* Created an algorithm configuration mechanism, via the
  org.jgap.Configuration class, that provides a central point of
  control over the various configuration settings.
* Increased modularity by abstracting out the genetic operators and
  the random number generator.
* Created an org.jgap.impl package where stock implementations of
  JGAP interfaces, such as genetic operators and natural selectors,
  are now stored.
* Updated Ant build script.
* Fixed bug wherein BitSet.length() was occasionally being used instead
  of Chromosome.size(), resulting in less desirable behavior.
* Fixed memory leak in Genotype.
* Made thread-safe.
* Updated the brace and indentation style.
* Updated README file


0.1
------------
Initial Release
