@@ -1,25 +1,24 @@
 package org.jgap.xml;
 
-import javax.xml.parsers.DocumentBuilderFactory;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.ParserConfigurationException;
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
-import org.w3c.dom.Attr;
-import org.w3c.dom.Text;
-import org.jgap.Chromosome;
-import org.jgap.Genotype;
+import javax.xml.parsers.*;
+import org.w3c.dom.*;
+import java.util.BitSet;
+import org.jgap.*;
 
-public class XMLManager {
 
+public class XMLManager 
+{
   private static final DocumentBuilder documentCreator;
 
-  static {
-    try {
+  static 
+  {
+    try 
+    {
       documentCreator =
          DocumentBuilderFactory.newInstance().newDocumentBuilder();
     }
-    catch (ParserConfigurationException parserError) {
+    catch (ParserConfigurationException parserError) 
+    {
       throw new RuntimeException(
         "XMLManager: Unable to setup DocumentBuilder: " +
         parserError.getMessage());
@@ -30,10 +29,12 @@ public class XMLManager {
 
   private XMLManager() {}
 
-  public static Document getChromosomeAsDocument(Chromosome subject) {
+  public static Document getChromosomeAsDocument(Chromosome subject) 
+  {
     // DocumentBuilders do not have to be thread safe.
     Document chromosomeDocument;
-    synchronized(lock) {
+    synchronized(lock) 
+    {
       chromosomeDocument = documentCreator.newDocument();
     }
 
@@ -45,10 +46,12 @@ public class XMLManager {
   }
 
 
-  public static Document getGenotypeAsDocument(Genotype subject) {
+  public static Document getGenotypeAsDocument(Genotype subject)
+  {
     // DocumentBuilders do not have to be thread safe.
     Document genotypeDocument;
-    synchronized(lock) {
+    synchronized(lock)
+    {
       genotypeDocument = documentCreator.newDocument();
     }
 
@@ -61,7 +64,8 @@ public class XMLManager {
 
 
   public static Element getChromosomeAsElement(Chromosome subject, 
-                                               Document xmlDocument) {
+                                               Document xmlDocument)
+  {
     int subjectSize = subject.size();
 
     Element chromosomeTag = xmlDocument.createElement("chromosome"); 
@@ -72,11 +76,14 @@ public class XMLManager {
 
     StringBuffer geneValues = new StringBuffer(subjectSize);
     
-    for(int i = 0; i < subjectSize; i++) {
-      if (subject.getAllele(i)) {
+    for(int i = 0; i < subjectSize; i++)
+    {
+      if (subject.getAllele(i))
+      {
         geneValues.append('1');
       }
-      else {
+      else
+      {
         geneValues.append('0');
       }
     }
@@ -92,13 +99,15 @@ public class XMLManager {
 
 
   public static Element getGenotypeAsElement(Genotype subject,
-                                             Document xmlDocument) {
+                                             Document xmlDocument)
+  {
     Chromosome[] population = subject.getChromosomes();
 
     Element genotypeTag = xmlDocument.createElement("genotype");
     genotypeTag.setAttribute("size", Integer.toString(population.length));
 
-    for(int i = 0; i < population.length; i++) {
+    for(int i = 0; i < population.length; i++)
+    {
       Element chromosomeElement =
         getChromosomeAsElement(population[i], xmlDocument);
 
@@ -106,6 +115,84 @@ public class XMLManager {
     } 
 
     return genotypeTag;
+  }
+
+
+  public static Chromosome getChromosomeFromElement(Configuration gaConf,
+                                                    Element xmlElement)
+                           throws InvalidConfigurationException
+  {
+    // Find the text node, which is the representation of the genes.
+    Node genes = xmlElement.getElementsByTagName("genes").item(0);
+    genes.normalize();
+    NodeList children = genes.getChildNodes();
+    int childrenSize = children.getLength();
+    String geneValues = null;
+
+    for (int i = 0; i < childrenSize; i++)
+    {
+      if (children.item(i).getNodeType() == Node.TEXT_NODE)
+      {
+        geneValues = children.item(i).getNodeValue();
+        break;
+      }
+    }
+
+    if (geneValues == null)
+    {
+      throw new RuntimeException("<genes> element not found!");
+    }
+
+    int genesLength = geneValues.length();
+    BitSet geneBits = new BitSet(genesLength);
+    for(int i = 0; i < genesLength; i++)
+    {
+      if (geneValues.charAt(i) == '1')
+      {
+        geneBits.set(i);
+      }
+      else
+      {
+        geneBits.clear(i);
+      }
+    }
+
+    return new Chromosome(gaConf, geneBits);
+  }
+
+
+  public static Genotype getGenotypeFromElement(Configuration gaConf,
+                                                Element xmlElement)
+                         throws InvalidConfigurationException
+  {
+    NodeList chromosomes = xmlElement.getElementsByTagName("chromosome");
+    int numChromosomes = chromosomes.getLength();
+
+    Chromosome[] population = new Chromosome[numChromosomes];
+
+    for (int i = 0; i < numChromosomes; i++)
+    {
+      population[i] = getChromosomeFromElement(gaConf,
+                                               (Element) chromosomes.item(i));
+    }
+
+    return new Genotype(gaConf, population);
+  }
+
+
+  public static Genotype getGenotypeFromDocument(Configuration gaConf,
+                                                 Document xmlDocument)
+                         throws InvalidConfigurationException
+  {
+    return getGenotypeFromElement(gaConf, xmlDocument.getDocumentElement());
+  }
+
+
+  public static Chromosome getChromosomeFromDocument(Configuration gaConf,
+                                                     Document xmlDocument)
+                           throws InvalidConfigurationException
+  {
+    return getChromosomeFromElement(gaConf, xmlDocument.getDocumentElement());
   }
 }
 
